--- a/checkRangeThree.html
+++ b/checkRangeThree.html
@@ -49,6 +49,10 @@
                           </div>
                       <div class="ui blue submit button convertBtnClass" id="calcTip">Enter</div>
                       <br>
+                      <div style = "text-align: center">
+                      <a href="index.html">Back to Home Page</a>
+                    </div>
+                      <br>
                     </div>
                   </div>
                 </div>
