--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Exercise 2.0</title>
+    <title>JS Exercise 2.0</title>
 
     <style>
       * {
@@ -17,6 +17,28 @@
   background: #ecf0f1;
   padding: 0 1em 1em;
 }
+
+a {
+  text-decoration: none;
+}
+
+a {   
+    color: black;   
+}
+
+a:focus {
+  outline: none !important;
+  color: steelblue;
+}
+a[tabindex]:focus {
+    color:blue;
+    outline: none;
+}
+
+a::after {
+  color: darkgray;
+}
+
 h1 {
   margin: 0;
   line-height: 2;
