--- a/numberThirteen.html
+++ b/numberThirteen.html
@@ -33,6 +33,10 @@
                           </div>
                         </div>
                       <div class="ui blue submit button convertBtnClass" id="calcTip1">Enter</div>
+                      <br>
+                      <div style = "text-align: center">
+                      <a href="index.html">Back to Home Page</a>
+                    </div>
 
                         <br>
                         <br>
