--- a/temperatureConverter.html
+++ b/temperatureConverter.html
@@ -56,6 +56,10 @@
 
                       <div class="ui blue submit button convertBtnClass" id="calcTip2">Enter</div>
                       <br>
+                      <div style = "text-align: center">
+                      <a href="index.html">Back to Home Page</a>
+                    </div>
+                      <br>
                     </div>
                   </div>
                 </div>
