--- a/index.html
+++ b/index.html
@@ -128,6 +128,32 @@ input:checked ~ .tab-content {
 <div class="row">
   <div class="col">
     <div class="tabs">
+      
+
+      <div class="tab">
+        <input type="checkbox" id="chck11">
+        <label class="tab-label" for="chck11">Use Case 3.1: Find the sign of product of three numbers</label>
+        <div class="tab-content">
+         <a href="D3UseCase01GetSign.html">JavaScript conditional statement to find the sign of product of three numbers.
+          Display an alert box with the specified sign.</a>
+        </div>
+      </div>
+
+      <div class="tab">
+        <input type="checkbox" id="chck12">
+        <label class="tab-label" for="chck12">Use Case 3.2: Greatest common divisor (GCD)</label>
+        <div class="tab-content">
+         <a href="D3UseCase02GetGCD.html">JavaScript program to compute the greatest common divisor (GCD) of two positive integers.</a>
+        </div>
+      </div>
+
+      <div class="tab">
+        <input type="checkbox" id="chck13">
+        <label class="tab-label" for="chck13">Use Case 3.3: Ladder Pattern</label>
+        <div class="tab-content">
+         <a href="D3UseCase03LadderPattern.html">JavaScript program to construct a Ladder pattern, using a nested for loop.. Enter a single character below</a>
+        </div>
+      </div>
 
       <div class="tab">
         <input type="checkbox" id="chck1">
@@ -199,7 +225,6 @@ input:checked ~ .tab-content {
                         <a href="temperatureConverter.html">Celcius To Farenheit and Farenheit to Celcius</a>
                         </div>
                     </div>
-
                     <div class="tab">
                         <input type="checkbox" id="chck10">
                         <label class="tab-label" for="chck10">Convert Number to Hours : Mins</label>
