--- a/D3UseCase03LadderPattern.html
+++ b/D3UseCase03LadderPattern.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <title>Build A Ladder Pattern Using a Character</title>
+
+    <style>
+    ul {
+      list-style-type: none;
+      list-style: none;
+    }
+    </style>
 </head>
 <body>
     <br>
@@ -80,7 +87,7 @@
                     in1 = inputFieldVal1;
                     in2 = inputFieldVal2;
 
-                    let cont = '<ul style=list-style-type: "none";>'
+                    let cont = '<ul>'
                     let text ="<span></span>";
 
                     for(x=1; x <=in2; x++) { 
