--- a/index.html
+++ b/index.html
@@ -155,6 +155,31 @@ input:checked ~ .tab-content {
         </div>
       </div>
 
+
+<div class="tab">
+  <input type="checkbox" id="chck14">
+  <label class="tab-label" for="chck14">Use Case 3.4: Get your Happy Numbers</label>
+  <div class="tab-content">
+   <a href="D3UseCase04HappyNumber.html">"Starting with any positive integer, replace the number by the sum of the squares of its digits, and repeat the process until the number equals 1 (where it will stay), or it loops endlessly in a cycle which does not include 1. Those numbers for which this process ends in 1 are happy numbers, while those that do not end in 1 are unhappy numbers (or sad numbers)". Write a JavaScript program to find and print the first 5 happy numbers. </a>
+  </div>
+</div>
+
+<div class="tab">
+  <input type="checkbox" id="chck15">
+  <label class="tab-label" for="chck15">Use Case 3.5: Fizz Buzz</label>
+  <div class="tab-content">
+   <a href="D3UseCase05FizzBuzz.html"> JavaScript program which iterates the integers from 1 to 100. But for multiples of three print "Fizz" instead of the number and for the multiples of five print "Buzz". For numbers which are multiples of both three and five print "FizzBuzz" </a>
+  </div>
+</div>
+
+
+<div class="tab">
+  <input type="checkbox" id="chck16">
+  <label class="tab-label" for="chck16">Use Case 3.6: Odd Even</label>
+  <div class="tab-content">
+   <a href="D3UseCase06OddEven.html"> JavaScript for loop that will iterate to a number between 0 to 100. For each iteration, it will check if the current number is odd or even, and display a message to the screen. </a>
+  </div>
+</div>
       <div class="tab">
         <input type="checkbox" id="chck1">
         <label class="tab-label" for="chck1">Angle Type Checker</label>
@@ -210,6 +235,8 @@ input:checked ~ .tab-content {
                     <a href="numberToString.html">JavaScript program to divide two positive numbers and return a string with properly formatted commas.</a>
                     </div>
                 </div>
+
+
 
                 <div class="tab">
                     <input type="checkbox" id="chck8">
