--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
     <div class="col">
       <div class="tabs">
 
+          
+
+
         <div class="tab">
           <input type="checkbox" id="chck17">
           <label class="tab-label" for="chck17">Other Javascript Use Cases</label>
@@ -155,6 +158,14 @@
             <a href="otherUseCases.html">Javascrip Collection of Use Cases</a>
           </div>
         </div>
+
+        <div class="tab">
+            <input type="checkbox" id="chck18">
+            <label class="tab-label" for="chck18">Generate Random Saying</label>
+            <div class="tab-content">
+              <a href="generateRandomQuotes.html">Javascript generating random saying</a>
+            </div>
+          </div>
 
         <div class="tab">
           <input type="checkbox" id="chck11">
