--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@
 
         <div class="tab">
             <input type="checkbox" id="chck18">
+            <label class="tab-label" for="chck18">Universe Images</label>
+            <div class="tab-content">
+              <a href="universe.html">Javascrip to dynamically change your image using radio buttons</a>
+            </div>
+          </div>
+
+        <div class="tab">
+            <input type="checkbox" id="chck18">
             <label class="tab-label" for="chck18">Generate Random Saying</label>
             <div class="tab-content">
               <a href="generateRandomQuotes.html">Javascript generating random saying</a>
@@ -287,7 +295,6 @@
             <a href="numberToString.html">JavaScript program to divide two positive numbers and return a string with
               properly formatted commas.</a>
           </div>
-          <div class="tab-content">
           </div>
 
 
