--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
       transition: all 0.35s;
     }
 
+
     .tab-close {
       display: flex;
       justify-content: flex-end;
       padding: 1em;
       font-size: 0.75em;
-      background: #2c3e50;
+      background: #2b3d4e;
       cursor: pointer;
     }
 
@@ -157,21 +158,29 @@
         </div>
 
         <div class="tab">
-            <input type="checkbox" id="chck18">
-            <label class="tab-label" for="chck18">Universe Images</label>
-            <div class="tab-content">
-              <a href="universe.html">Javascrip to dynamically change your image using radio buttons</a>
-            </div>
+          <input type="checkbox" id="chck18">
+          <label class="tab-label" for="chck18">Universe Images</label>
+          <div class="tab-content">
+            <a href="universe.html">Javascrip to dynamically change your image using radio buttons</a>
           </div>
+        </div>
 
         <div class="tab">
-            <input type="checkbox" id="chck19">
-            <label class="tab-label" for="chck19">Generate Random Saying</label>
-            <div class="tab-content">
-              <a href="generateRandomQuotes.html">Javascript generating random saying</a>
-            </div>
+          <input type="checkbox" id="chck19">
+          <label class="tab-label" for="chck19">Generate Random Saying</label>
+          <div class="tab-content">
+            <a href="generateRandomQuotes.html">Javascript generating random saying</a>
           </div>
+        </div>
+        
 
+        <div class="tab">
+          <input type="checkbox" id="chck20">
+          <label class="tab-label" for="chck20"> Event Handling, Image Map</label>
+          <div class="tab-content">
+            <a href="exerciseEventAndImageMap.html">Javascript onblur, onclick, mousemove, focus</a>
+          </div>
+        </div>
         <div class="tab">
           <input type="checkbox" id="chck11">
           <label class="tab-label" for="chck11">Use Case 3.1: Find the sign of product of three numbers</label>
@@ -292,37 +301,37 @@
             <a href="numberToString.html">JavaScript program to divide two positive numbers and return a string with
               properly formatted commas.</a>
           </div>
-          </div>
-
-
-
-          <div class="tab">
-            <input type="checkbox" id="chck8">
-            <label class="tab-label" for="chck8">Reverse a Word</label>
-            <div class="tab-content">
-              <a href="reverseString.html">JavaScript program to reverse a given string.</a>
-            </div>
-          </div>
-          <div class="tab">
-            <input type="checkbox" id="chck9">
-            <label class="tab-label" for="chck9">Celcius To Farenheit and Farenheit to Celcius</label>
-            <div class="tab-content">
-              <a href="temperatureConverter.html">Celcius To Farenheit and Farenheit to Celcius</a>
-            </div>
-          </div>
-          <div class="tab">
-            <input type="checkbox" id="chck10">
-            <label class="tab-label" for="chck10">Convert Number to Hours : Mins</label>
-            <div class="tab-content">
-
-              <a href="timeConverter.html">JavaScript program to convert a given number to hours and minutes.</a>
-            </div>
-          </div>
-
-
         </div>
+
+
+
+        <div class="tab">
+          <input type="checkbox" id="chck8">
+          <label class="tab-label" for="chck8">Reverse a Word</label>
+          <div class="tab-content">
+            <a href="reverseString.html">JavaScript program to reverse a given string.</a>
+          </div>
+        </div>
+        <div class="tab">
+          <input type="checkbox" id="chck9">
+          <label class="tab-label" for="chck9">Celcius To Farenheit and Farenheit to Celcius</label>
+          <div class="tab-content">
+            <a href="temperatureConverter.html">Celcius To Farenheit and Farenheit to Celcius</a>
+          </div>
+        </div>
+        <div class="tab">
+          <input type="checkbox" id="chck10">
+          <label class="tab-label" for="chck10">Convert Number to Hours : Mins</label>
+          <div class="tab-content">
+
+            <a href="timeConverter.html">JavaScript program to convert a given number to hours and minutes.</a>
+          </div>
+        </div>
+
+
       </div>
     </div>
+  </div>
 </body>
 
 </html>
