--- a/carMove.html
+++ b/carMove.html
@@ -10,11 +10,13 @@
         function init() {
             imgObj = document.getElementById('car');
             imgObj.style.position= 'relative'; 
-            imgObj.style.left = '0px'; 
+            imgObj.style.top = '0px'; 
         }
         function moveRight() {
-            imgObj.style.left = parseInt(imgObj.style.left) + 10 + 'px';
+            imgObj.style.top = parseInt(imgObj.style.top) + 10 + 'px';
             animate = setTimeout(moveRight, 60);  // moves 10 pixels to the right every 60 milliseconds
+            console.log(imgObj.style.top)
+
         }
         function stop() {
             clearTimeout(animate);   // stops car 
